<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.appicplay.helloworld.MainActivity">


    <Button
        android:id="@+id/btn_native_ad"
        android:text="@string/btn_native_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_interstitial_ad"
        android:text="@string/btn_interstitial_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_banner_ad"
        android:text="@string/btn_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_splash_ad"
        android:text="@string/btn_splash_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_reward_video_ad"
        android:text="@string/btn_reward_video_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_general_info"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/device_info_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#000" />


</LinearLayout>